# task_manager

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  run_server.sh
.github/workflows/: main.yml
main/: admin.py  permissions.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_user_role_alter_user_email_alter_user_first_name_and_more.py  0003_tag_task.py  0004_alter_task_due_date.py  0005_alter_task_priority.py  0006_alter_user_username.py  0007_user_date_of_birth_user_phone.py  0008_user_avatar_picture.py
main/models/: __init__.py  tag.py  task.py  user.py
main/templates/emails/: base.html  notification.html
services/: emails.py  single_resource.py
task_manager/: asgi.py  settings.py  urls.py  wsgi.py
test/: base.py  model_factories.py  test_admin.py  test_current_user.py  test_emails.py  test_permissions.py  test_rollbar.py  test_tokens.py  test_user.py
