# add plugins: pip install flake8==6.0.0 flake8-bugbear==23.7.10 pep8-naming==0.13.3 flake8-pyproject==1.2.3 isort==5.12.0
# create requirements.txt: pip freeze | grep -v flake8 | grep -v flake8-bugbear | grep -v Flake8-pyproject | grep -v isort | grep -v pep8-naming | grep -v pycodestyle | grep -v pyflakes > requirements.txt

# автоматическое форматирование импортов с помощью команды isort .

[tool.flake8]

exclude = 'venv, .eggs, .git, .hg, .mypy_cache, .tox, .venv, _build, buck-out, build, dist, foo.py, tests, migrations'

max-line-length = 120
max-complexity = 10

ignore = 'B008, N805'

[tool.isort]

line_length = 120
multi_line_output = 2
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
lines_after_imports = 2
lines_between_types = 1
force_alphabetical_sort = 'false'
force_alphabetical_sort_within_sections = 'true'

[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["dbp"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
drf-access-policy = "^1.5.0"
factory-boy = "^3.3.0"
drf-yasg = "^1.21.7"
djangorestframework-simplejwt = "^5.3.0"
freezegun = "^1.2.2"
coverage = "6.5.0"
coveralls = "^3.3.1"
pytest-cov = "^4.1.0"
rollbar = "^0.16.3"
newrelic = "^9.1.1"
django-storages = "^1.14.2"
boto3 = "^1.28.75"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"